# rust_practice

./: .gitignore
001.hello world/: main.rs
002.hello_cargo/src/: main
003.guess_game/: Cargo.toml
003.guess_game/src/: main.rs
004.data_type/src/: main  main.rs
005.func/src/: main.rs
006.ifelse/: main.rs
007.loop/: main.rs
008.ownership/: main  main.rs
009.references&borrwing/: main.rs
010.slice/: main.rs
011.struct/: main.rs
012.rectangles/src/: main.rs
013.enum/: main.rs
014.option/: main.rs
015.match/: main.rs
016.mod/src/: back_of_house.rs  front_of_house.rs  main.rs
017.vector/: main.rs
018.String/: main.rs
019.map/: main.rs
020.error/: main.rs
021.generics/: main.rs
022.trait/src/: lib.rs  main.rs
023.lifetime/src/: main.rs
024.test/src/: lib.rs  main.rs
024.test/tests/: integration_tests.rs
025.minigrep/: output.txt  poem.txt
025.minigrep/src/: lib.rs  main.rs
026.closures/src/: main.rs
027.iterator/src/: main.rs
028.cargo/: Cargo.toml
028.cargo/src/: lib.rs  main.rs
029.workspaces/add_one/: Cargo.toml
029.workspaces/adder/: Cargo.toml
030.smart_pointer/src/: main.rs
031.drop/src/: main.rs
032.rc&refcell/src/: main.rs
033.thread/src/: main.rs
034.channel/src/: main.rs
035.mutex/src/: main.rs
036.oop/src/: lib.rs  main.rs
037.unsafe_rust/src/: main.rs
038.web_server/src/: lib.rs  main.rs
039.tcp/: Cargo.toml
040.http_server/: Cargo.toml
040.http_server/httpserver/: Cargo.toml
041.ws/: Cargo.toml
041.ws/src/: main.rs
041.ws/webservice/: Cargo.toml
1.hello world/: main
(+29 files in other folders)
